	symbols anymore.

    o	Colour conversion (rgb, gray, hsv) truncated doubles and so
	gave machine-dependent results on the examples. It now rounds.

    o	cat() now admits again that it can't handle lists instead of
	"random" segfaulting.

    o	More accurate rounding (including rounding to even) on platforms
	without rint (e.g. Windows).

    o   qgeom() is now left-continuous with a tolerance, and so the
	example on the help page will be platform-independent.

    o	pretty() has been changed to use tolerance around integers and
	so will be more platform-independent. The exact output has
	probably changed on all platforms for some input.


		CHANGES IN R VERSION 0.65.0

NEW FEATURES

    o	A first step in improving performance has been made.
	Attached objects, libraries etc are now hashed; performance
	gains will be particularly apparent if large packages are in use.

    o	First version of package ts for time-series analysis.
	This has fairly complete S-PLUS compatibility, but more features
	are planned. See library(help=ts) for details.

    o	warnings can be collected (options(warn=0), the default), printed
	immediately (options(warn=1)) or turned into errors (options(warn=2)).
	As a consequence, all warnings and errors now are printed followed
	by a newline, if one is not supplied. (This should improve the
	S compatibility of the use of PROBLEM ... in compiled code.)



    o	All R environment variables are now of the form `R_xxx'.  In
	particular, `RHOME', `RLIBS' and `RPROFILE' are now called
	`R_HOME', `R_LIBS', and `R_PROFILE'.

    o	The handling of q()/quit()/EOF has been changed, with a new option
	"default".  In interactive use this asks unless --save or --no-save
	has been specified: if these are specified they set the default.

    o	Limited capability for tilde expansion of file names even without
	readline (on Unix, and on Windows).

    o	New environment variables `R_HISTFILE' and `R_HISTSIZE' for the
	name and size of the history file.
